@@ -29,6 +29,8 @@
 
 // constants
 
+#include <classes/exception.h>
+
 namespace qpp
 {
 
@@ -40,7 +42,7 @@ namespace qpp
 constexpr cplx operator
 ""
 
-_i(unsigned long long int x)
+_i(unsigned long long int x) noexcept
 {
     return
             {0., static_cast<double>(x)};
@@ -54,7 +56,7 @@ _i(unsigned long long int x)
 constexpr cplx operator
 ""
 
-_i(long double x)
+_i(long double x) noexcept
 {
     return
             {0., static_cast<double>(x)};
@@ -103,6 +105,8 @@ constexpr double infty = std::numeric_limits<double>::infinity();
 */
 inline cplx omega(idx D)
 {
+    if (D == 0)
+        throw Exception::Type::OUT_OF_RANGE;
     return exp(2.0 * pi * 1_i / static_cast<double>(D));
 }
 
