@@ -43,12 +43,12 @@ class IOManipRange
 public:
     explicit IOManipRange(InputIterator first, InputIterator last,
             const std::string& separator, const std::string& start = "[",
-            const std::string& end = "]") :
-            _first(first),
-            _last(last),
-            _separator(separator),
-            _start(start),
-            _end(end)
+            const std::string& end = "]") noexcept :
+            _first{first},
+            _last{last},
+            _separator{separator},
+            _start{start},
+            _end{end}
     {
     }
 
@@ -81,12 +81,12 @@ class IOManipPointer
 public:
     explicit IOManipPointer(const PointerType* p, const idx n,
             const std::string& separator, const std::string& start = "[",
-            const std::string& end = "]") :
-            _p(p),
-            _n(n),
-            _separator(separator),
-            _start(start),
-            _end(end)
+            const std::string& end = "]") noexcept :
+            _p{p},
+            _n{n},
+            _separator{separator},
+            _start{start},
+            _end{end}
     {
     }
 
@@ -122,13 +122,13 @@ public:
     template<typename Derived>
     explicit IOManipEigen(const Eigen::MatrixBase<Derived>& A, double chop =
     qpp::chop) :
-            _A(A.template cast<cplx>()), _chop(chop)
+            _A{A.template cast<cplx>()}, _chop{chop}
     {
     }
 
     // Complex numbers
-    explicit IOManipEigen(const cplx z, double chop = qpp::chop) :
-            _A(cmat::Zero(1, 1)), _chop(chop)
+    explicit IOManipEigen(const cplx z, double chop = qpp::chop) noexcept :
+            _A{cmat::Zero(1, 1)}, _chop{chop}
     {
         // put the complex number inside an Eigen matrix
         _A(0, 0) = z;
