@@ -11,3 +11,4 @@ Version 0.3 - 15 February 2015
 	- Added qpp::internal::Singleton<T>::get_thread_local_instance()
 
 Version 0.3.1 - development
+    - Added noexcept specification where suitable
